@@ -2,8 +2,8 @@
 <definition>
   <datasource type="PYEVAL" name="$(name)_description">
     <result name="result">
-if "$(name)_fileindex" in commonblock:
-    commonblock.pop("$(name)_fileindex")
+from nxstools.pyeval import common
+common.blockitem_rm(commonblock, ["$(name)_fileindex"])
 ds.result = "$(name)"</result>
   </datasource>
 </definition>
