@@ -2,8 +2,9 @@
 <definition>
   <datasource type="PYEVAL" name="$(name)_fileindex_cb">
     <result name="result">
-if "$(name)_fileindex" not in commonblock:
-    commonblock["$(name)_fileindex"] = ds.$(name)_fileindex 
-ds.result = ds.$(name)_fileindex - 1</result>
+from nxstools.pyeval import pe
+ds.result = pe.fileindex_cb(
+    commonblock, "$(name)_fileindex", ds.$(name)_fileindex )
+    </result>
  $datasources.$(name)_fileindex</datasource>
 </definition>
