@@ -4,6 +4,7 @@
    <result name="result">
 from nxstools.pyeval import pilatus
 ds.result = pilatus.postrun(
+    commonblock,
     ds.$(name)_filestartnum,
     ds.$(name)_filedir,
     ds.$(name)_nbframes,
