@@ -799,6 +799,7 @@ class NXSCreateOnlineCPFSTest(unittest.TestCase):
                      '   <result name="result">\n'
                      'from nxstools.pyeval import pilatus\n'
                      'ds.result = pilatus.postrun(\n'
+                     '    commonblock,\n'
                      '    ds.mypilatus_filestartnum,\n'
                      '    ds.mypilatus_filedir,\n'
                      '    ds.mypilatus_nbframes,\n'
@@ -1116,6 +1117,7 @@ class NXSCreateOnlineCPFSTest(unittest.TestCase):
                      '   <result name="result">\n'
                      'from nxstools.pyeval import pilatus\n'
                      'ds.result = pilatus.postrun(\n'
+                     '    commonblock,\n'
                      '    ds.mypilatus_filestartnum,\n'
                      '    ds.mypilatus_filedir,\n'
                      '    ds.mypilatus_nbframes,\n'
