@@ -3,6 +3,8 @@
 	* add cleaning in lambdavds description
 	* add move lambda datasources to pyeval
 	* add move pilatus datasources to pyeval
+	* add move pco datasources to pyeval
+	* add move pe datasources to pyeval
 	* add move limaccd datasources to pyeval
 	* tagged as v3.9.0
 
